--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src=".js" defer></script>
 </head>
 <body>
+    <button class="eraser">Clear</button>
     <div class="container"></div>
 </body>
 </html>
